all bugs is fixed complex scrollbar and ticket raise and ticket details refresh is done

--- a/src/ui/complexes/ComplexComposition.css
+++ b/src/ui/complexes/ComplexComposition.css
@@ -106,9 +106,9 @@
   background: white;
 }
 
-.complex-composition {
-  width: 140%; /* Default width */
-}
+/* .complex-composition {
+  width: 140%; 
+} */
 
 @media (min-width: 1920px) {
   .complex-composition {
